# duality

./: .gitignore  .pre-commit-config.yaml  CDM_Architecture_old.pptx  Duality_demo_2021-12-10.ipynb  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
demo/: .env.template  Duality_demo_2021-12-10.ipynb  conda-project.yml  default.conda-lock.yml  environment.yml
duality/: adt.py  base.py  dtdl.py  models.py  repository.py
examples/: delete_all_from_adt.py  models.py  print_all_dogs.py  upload.py
src/duality/: dtdl.py
tests/: conftest.py  test_adt_interface.py  test_dtdl.py  test_model_repository.py  test_model_to_dtdl.py  test_models.py
